--- a/.github/workflows/firstworkflow.yaml
+++ b/.github/workflows/firstworkflow.yaml
@@ -11,4 +11,6 @@ jobs:
       - name: print stuff
         run: echo "Testing first workflow"
         shell: bash
-          
+      - name: list all
+        run:  ls
+        shell: bash
