--- a/.github/workflows/firstworkflow.yaml
+++ b/.github/workflows/firstworkflow.yaml
@@ -13,7 +13,9 @@ jobs:
         shell: bash
       - name: list all
         run:  |
-          python pip install numpy
+          
+          pip install --upgrade pip
+          pip install numpy
           cd minwage_yamls
           python test.py
         shell: bash
